Fixed loading screen on smaller devices

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,9 @@
 /* === MEDIA QUERIES === */
 @media (max-width: 1024px) {
+    #loader .loader-text {
+        font-size: 1.2em;
+    }
+
     .cell span {
         font-size: 1.2rem;
         padding: 0.4rem 0.75rem;
@@ -20,6 +24,10 @@
 
 
 @media (max-width: 768px) {
+    #loader .loader-text {
+        font-size: 1.1em;
+    }
+
     .cell span {
         font-size: 1.2rem;
         padding: 0.4rem 0.75rem;
@@ -44,6 +52,10 @@
 }
 
 @media (max-width: 480px) {
+    #loader .loader-text {
+        font-size: 1em;
+    }
+
     .cell span {
         font-size: 1rem;
         padding: 0.3rem 0.5rem;
@@ -133,6 +145,10 @@
 
 
 @media (max-height: 480px) and (orientation: landscape) {
+    #loader .loader-text {
+        font-size: 1.1em;
+    }
+
     .navigation-menu {
         position: fixed;
         left: -10px;
